[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/bg.png" type="Texture" id=1]
[ext_resource path="res://Themes/kenneyUI.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Login.gd" type="Script" id=3]
[ext_resource path="res://Themes/kenvector_future.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="bg" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 150.0
margin_bottom = -150.0
custom_constants/separation = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="Container"]
margin_right = 1024.0
margin_bottom = 150.0
theme = ExtResource( 2 )
custom_constants/separation = 15

[node name="Username" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_left = 112.0
margin_right = 912.0
margin_bottom = 39.0
rect_min_size = Vector2( 800, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Username"]
margin_top = 10.0
margin_right = 387.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "EMAIL:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer2/Username"]
margin_left = 412.0
margin_right = 800.0
margin_bottom = 39.4343
size_flags_horizontal = 11
caret_blink = true

[node name="Password" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_left = 112.0
margin_top = 54.0
margin_right = 912.0
margin_bottom = 93.0
rect_min_size = Vector2( 800, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Password"]
margin_top = 10.0
margin_right = 387.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "PASSWORD:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer2/Password"]
margin_left = 412.0
margin_right = 800.0
margin_bottom = 39.4343
size_flags_horizontal = 11
secret = true
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_top = 108.0
margin_right = 1024.0
margin_bottom = 150.0
alignment = 1

[node name="RegisterButton" type="Button" parent="Container/VBoxContainer2/HBoxContainer"]
margin_left = 412.0
margin_right = 529.324
margin_bottom = 42.251
text = "REGISTER"

[node name="LoginButton" type="Button" parent="Container/VBoxContainer2/HBoxContainer"]
margin_left = 532.0
margin_right = 610.324
margin_bottom = 42.251
size_flags_horizontal = 4
text = "LOGIN"

[node name="Notification" type="Label" parent="Container"]
margin_top = 200.0
margin_right = 1024.0
margin_bottom = 218.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
align = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Container/VBoxContainer2/HBoxContainer/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="pressed" from="Container/VBoxContainer2/HBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
